--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.2.0",
-    "dotenv": "^16.0.1",
-    "firebase": "^9.9.2"
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
